# big-Africa

./: READ.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  prisma.config.ts  prod.txt  replit.md  tsconfig.json
.upm/: store.json
App/Helper/: Data.js  notifications.js  storage.js
App/app/: index.jsx  personalise.jsx  timetable.jsx
admin/: pnpm-lock.yaml
app/: globals.css  layout.tsx
app/(auth)/: layout.tsx
app/(public)/: layout.tsx  page.tsx
app/admin/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/my-enrollments/: page.tsx
app/not-admin/: page.tsx
backend/: Cargo.toml
backend/src/: main.rs  nwapay.rs
backend/src/db/: config.rs
backend/src/models/: ext.rs  main_data.rs  wrapper.rs
backend/src/parser/: ai_parse.rs  mod.rs  models.rs  wrapper.rs
backend/src/routes/: ai_parser.rs  auth.rs  courses.rs  mod.rs  subscriptions.rs  user_timetable.rs
components/enrollment/: infrastructure-selection.tsx
components/file-uploader/: RenderState.tsx  Uploader.tsx
components/general/: EmptyState.tsx
components/lesson-blocks/: BlockRenderer.tsx  FileBlockRenderer.tsx  ImageBlockRenderer.tsx  QuizBlockRenderer.tsx  TextBlockRenderer.tsx  VideoBlockRenderer.tsx
docs/: nkwa-integration.md
hooks/: try-catch.ts  use-confetti.ts  use-construct-url.ts  use-signout.ts
lib/: S3Client.ts  arcjet.ts  auth-client.ts  auth.ts  blockTypes.ts  db.ts  env.ts  infrastructure-utils.ts  logger.ts  nkwa.ts  notifications.ts  resend.ts  subscription-utils.ts  type.ts  zodSchema.ts
prisma/: schema.prisma
utils/: toastWithSound.ts
(+98 files in other folders)
