[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = {version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.140"
gemini_light_rs = "0.1.0"
dotenv = "0.15.0"
pdf-extract = "0.9.0"
tower-http = { version = "0.6.6", features = ["cors"] }
bcrypt = "0.17.0"
mongodb = "3.2.4"
anyhow = "1.0.98"
reqwest = "0.12.22"
uuid = { version = "1.10.0", features = ["v4"] }
hmac = "0.12.1"
sha2 = "0.10.8"
subtle = "2.5.0"
hex = "0.4.3"
futures-util = "0.3"
actix-web = "4"
actix-multipart = { version = "0.6", optional = true }
chrono = "0.4"
jsonwebtoken = "9"

[features]
default = []
multipart = ["actix-multipart"]
